# play-with-some-ds

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
fs/volumes/clickhouse/docker-entrypoint-initdb.d/: 1_create_hacker_news.sh
fs/volumes/clickhouse/etc/clickhouse-server/config.d/: config.xml
fs/volumes/clickhouse/etc/clickhouse-server/users.d/: users.xml
fs/volumes/postgres/docker-entrypoint-initdb.d/: 1_create_and_insert_table_hacker_news.sql  2_enable_index_and_replication.sql
